# solid-lang

./: BuiltIns.cpp  BuiltIns.h  CMakeLists.txt  Expression.cpp  Expression.h  ExpressionVisitor.h  IRGenerator.cpp  IRGenerator.h  JIT.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  SolidLang.cpp  SolidLang.h  THIRD-PARTY-NOTICES.txt  Visitor.h  main.cpp
benchmark/: test.cpp  test.solid
examples/: Average.solid  Factorial.solid  Fibonacci.solid  GettingStarted.solid  Operators.solid  PrintStars.solid  README.md  link.cpp
